--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -49,8 +49,8 @@
     </div>
 
 
-
-    <script src="../js/register.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="../js/register.js"></script>
 </body>
 
 </html>
