--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -9,8 +9,13 @@
 </head>
 
 <body class="bg-black">
+     <div class="relative">
+        <button id="login_btn" class="absolute top-4 right-4 bg-purple-200 p-2 rounded-sm cursor-pointer">
+            Login
+        </button>
+    </div>
     <div>
-        <h1 class="text-center text-4xl font-bold text-red-400">Chat App</h1>
+        <h1 class="text-center text-4xl font-bold text-red-400 mt-2">Chat App</h1>
 
         <h2 class="m-6 text-lg font-semibold text-white text-center text-2xl">Register</h2>
         <div class="flex justify-center mt-10 h-screen">
