fetched messages from db

--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -19,7 +19,7 @@
     </header>
 
     <main class="flex-1 w-full flex justify-center">
-        <div id="chatArea" class="flex flex-col space-y-2 p-4 w-full max-w-xl overflow-y-auto"></div>
+        <div id="chatArea" class="flex flex-col gap-2 p-4 h-[500px] overflow-y-auto "></div>
     </main>
 
     <footer class="bg-slate-800 p-2 w-full flex justify-center">
