--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -113,35 +113,90 @@
     </div>
   </div>
 
-  <!-- User List Modal (shows all registered users) -->
-<div id="userListModal" class="hidden fixed top-20 right-10 bg-white border border-gray-300 p-4 rounded shadow-lg w-60 z-40">
-  <h3 class="font-semibold text-lg mb-2">Registered Users</h3>
-  <ul id="userList" class="text-sm text-gray-800 space-y-1 max-h-64 overflow-y-auto"></ul>
-</div>
-
-<!-- Your existing HTML here... -->
-
-<!-- Chat Modal -->
-<div id="chatModal" class="hidden fixed inset-0 bg-black bg-opacity-30 flex justify-center items-center z-50">
-  <div class="bg-white rounded-lg w-full max-w-lg shadow-lg flex flex-col">
-    <div class="p-4 border-b flex justify-between items-center">
-      <h2 id="chatGroupName" class="font-bold">Group Chat</h2>
-      <button id="closeChatBtn" class="text-gray-500 hover:text-gray-700">✕</button>
+  <!-- Remove Member Modal -->
+  <div id="removeMemberModal"
+    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white p-6 rounded shadow-lg w-96 relative">
+      <button id="closeRemoveMemberModal"
+        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
+      <h2 class="text-lg font-bold mb-4">Remove Members</h2>
+      <div id="modalRemoveUserList" class="mb-4 max-h-60 overflow-y-auto"></div>
+      <div class="flex justify-end gap-2">
+        <button id="modalRemoveCloseBtn" class="px-4 py-2 bg-gray-300 rounded">Cancel</button>
+        <button id="modalRemoveBtn" class="px-4 py-2 bg-red-500 text-white rounded">Remove</button>
+      </div>
     </div>
-    <div id="chatMessages" class="p-4 flex-1 overflow-y-auto space-y-2">
-      <!-- Messages will be appended here -->
+  </div>
+
+
+  <!-- Add Admin Modal -->
+  <div id="addAdminModal"
+    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white p-6 rounded shadow-lg w-96 relative">
+      <button id="closeAddAdminModal"
+        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
+      <h2 class="text-lg font-bold mb-4">Add Admin</h2>
+      <div id="modalAdminList" class="mb-4 max-h-60 overflow-y-auto"></div>
+      <div class="flex justify-end gap-2">
+        <button id="modalAddAdminCloseBtn" class="px-4 py-2 bg-gray-300 rounded">Cancel</button>
+        <button id="modalAddAdminBtn" class="px-4 py-2 bg-blue-500 text-white rounded">Add</button>
+      </div>
     </div>
-    <form id="chatForm" class="p-4 border-t flex">
-      <input id="chatInput_group" type="text" placeholder="Type a message..."
-        class="flex-1 border rounded px-3 py-2 mr-2" required />
-      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Send</button>
-    </form>
+  </div>
+
+
+   <!-- Remove Admin Modal -->
+  <div id="removeAdminModal"
+    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white p-6 rounded shadow-lg w-96 relative">
+      <button id="closeRemoveAdminModal"
+        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
+      <h2 class="text-lg font-bold mb-4">Remove Admin</h2>
+      <div id="modalRemoveAdminList" class="mb-4 max-h-60 overflow-y-auto"></div>
+      <div class="flex justify-end gap-2">
+        <button id="modalRemoveAdminCloseBtn" class="px-4 py-2 bg-gray-300 rounded">Cancel</button>
+        <button id="modalRemoveAdminBtn" class="px-4 py-2 bg-blue-500 text-white rounded">Remove</button>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Show Members Modal -->
+<div id="showMembersModal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div class="bg-white rounded-lg p-6 w-96 relative">
+    <h2 class="text-lg font-bold mb-4">Group Members</h2>
+    <ul id="membersList" class="space-y-2"></ul>
+    <button id="closeShowMembersModal" class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">
+      Close
+    </button>
   </div>
 </div>
 
 
+  
+  <!-- User List Modal -->
+  <div id="userListModal" class="hidden fixed top-20 right-10 bg-white border border-gray-300 p-4 rounded shadow-lg w-60 z-40">
+    <h3 class="font-semibold text-lg mb-2">Registered Users</h3>
+    <ul id="userList" class="text-sm text-gray-800 space-y-1 max-h-64 overflow-y-auto"></ul>
+  </div>
 
-
+  <!-- Chat Modal -->
+  <div id="chatModal" class="hidden fixed inset-0 bg-black bg-opacity-30 flex justify-center items-center z-50">
+    <div class="bg-white rounded-lg w-full max-w-lg shadow-lg flex flex-col">
+      <div class="p-4 border-b flex justify-between items-center">
+        <h2 id="chatGroupName" class="font-bold">Group Chat</h2>
+        <button id="closeChatBtn" class="text-gray-500 hover:text-gray-700">✕</button>
+      </div>
+      <div id="chatMessages" class="p-4 flex-1 overflow-y-auto space-y-2">
+        <!-- Messages will be appended here -->
+      </div>
+      <form id="chatForm" class="p-4 border-t flex">
+        <input id="chatInput_group" type="text" placeholder="Type a message..."
+          class="flex-1 border rounded px-3 py-2 mr-2" required />
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Send</button>
+      </form>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="../js/home.js"></script>
