--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -198,6 +198,7 @@
     </div>
   </div>
 
+  <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="../js/home.js"></script>
 
