--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -5,51 +5,65 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
-<body class="relative bg-white h-screen flex flex-col items-center justify-between">
+<body class="relative bg-white h-screen flex flex-col justify-between overflow-hidden">
 
   <button id="logout_btn"
     class="absolute top-4 right-4 bg-purple-200 p-2 rounded-sm cursor-pointer z-50">Logout</button>
 
-  <header class="text-center text-2xl font-semibold p-4 border-b w-full">
+  <!-- header fixed by flex layout -->
+  <header class="text-center text-2xl font-semibold p-4 border-b w-full flex-shrink-0">
     Chat App
   </header>
 
-  <main class="flex-1 w-full flex flex-col items-center p-4">
+  <!-- main fills remaining space; inner scroll areas manage overflow -->
+  <main class="flex-1 w-full flex flex-col items-center p-4 max-w-2xl w-full mx-auto overflow-hidden">
 
     <div class="flex flex-wrap gap-3 mb-4">
-      <button id="seeOlderBtn"
-        class="px-4 py-1 bg-gray-200 rounded text-sm text-black hover:bg-gray-300">
+      <button id="seeOlderBtn" class="px-4 py-1 bg-gray-200 rounded text-sm text-black hover:bg-gray-300">
         See Older Messages
       </button>
 
-      <button id="fetchGroupsBtn"
-        class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
+      <button id="fetchGroupsBtn" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
         Show My Groups
       </button>
 
-      <button id="seeUsersBtn"
-        class="px-4 py-1 bg-blue-200 rounded text-sm text-black hover:bg-blue-300">
+      <button id="seeUsersBtn" class="px-4 py-1 bg-blue-200 rounded text-sm text-black hover:bg-blue-300">
         See All Users
       </button>
 
-      <button id="openModalBtn"
-        class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+      <button id="openModalBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
         + Create Group
       </button>
     </div>
 
-    <div id="groupsList" class="mt-4 w-full max-w-lg"></div>
+    <!-- show ~3 groups; scroll inside this box if more -->
+    <div id="groupsList" class="mt-4 w-full max-h-40 overflow-y-auto space-y-2"></div>
 
-    <div id="chatArea" class="flex flex-col gap-2 p-4 h-[500px] overflow-y-auto"></div>
+    <!-- Divider with "Global Chat" -->
+    <div class="flex items-center w-full my-4">
+      <hr class="flex-grow border-t border-gray-300">
+      <span class="px-3 text-gray-600 text-sm font-semibold">Global Chat</span>
+      <hr class="flex-grow border-t border-gray-300">
+    </div>
+
+    <!-- only this area scrolls for messages -->
+    <div id="chatArea" class="flex flex-col gap-2 p-4 w-full flex-1 min-h-0 overflow-y-auto"></div>
   </main>
 
-  <footer class="bg-slate-800 p-2 w-full flex justify-center">
+  <!-- footer fixed by flex layout -->
+  <footer class="bg-slate-800 p-2 w-full flex justify-center flex-shrink-0">
     <div class="flex w-full max-w-xl">
       <input id="chatInput" type="text" placeholder="Type a message..."
         class="flex-1 p-2 rounded-l border border-green-300 text-white focus:outline-none" />
+      <input type="file" id="fileInput" multiple class="hidden" />
+      <button type="button" id="attachBtn" class="text-gray-600 p-2 text-xl hover:text-blue-500">
+        <i class="fas fa-paperclip"></i>
+      </button>
       <button id="sendBtn" class="bg-white px-4 py-2 rounded-r text-slate-800 font-medium">
         Send
       </button>
@@ -57,11 +71,9 @@
   </footer>
 
   <!-- Create Group Modal -->
-  <div id="modalBackdrop"
-    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
-    <div class="bg-white w-full max-w-lg rounded-lg shadow-lg p-6 relative">
-      <button id="closeModalBtn"
-        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">
+  <div id="modalBackdrop" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white w/full max-w-lg rounded-lg shadow-lg p-6 relative">
+      <button id="closeModalBtn" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">
         ✕
       </button>
 
@@ -76,8 +88,7 @@
         </div>
 
         <div>
-          <label for="groupDescription"
-            class="block text-sm font-medium text-gray-700">Description</label>
+          <label for="groupDescription" class="block text-sm font-medium text-gray-700">Description</label>
           <textarea id="groupDescription" rows="2"
             class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring focus:ring-blue-300"></textarea>
         </div>
@@ -90,8 +101,7 @@
           <p class="text-xs text-gray-500 mt-1">Hold Ctrl (Windows) or Cmd (Mac) to select multiple users</p>
         </div>
 
-        <button type="submit"
-          class="w-full py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
+        <button type="submit" class="w-full py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
           Create Group
         </button>
       </form>
@@ -99,11 +109,9 @@
   </div>
 
   <!-- Add Member Modal -->
-  <div id="addMemberModal"
-    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div id="addMemberModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded shadow-lg w-96 relative">
-      <button id="closeAddMemberModal"
-        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
+      <button id="closeAddMemberModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
       <h2 class="text-lg font-bold mb-4">Add Members</h2>
       <div id="modalUserList" class="mb-4 max-h-60 overflow-y-auto"></div>
       <div class="flex justify-end gap-2">
@@ -114,11 +122,9 @@
   </div>
 
   <!-- Remove Member Modal -->
-  <div id="removeMemberModal"
-    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div id="removeMemberModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded shadow-lg w-96 relative">
-      <button id="closeRemoveMemberModal"
-        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
+      <button id="closeRemoveMemberModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
       <h2 class="text-lg font-bold mb-4">Remove Members</h2>
       <div id="modalRemoveUserList" class="mb-4 max-h-60 overflow-y-auto"></div>
       <div class="flex justify-end gap-2">
@@ -128,13 +134,10 @@
     </div>
   </div>
 
-
   <!-- Add Admin Modal -->
-  <div id="addAdminModal"
-    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div id="addAdminModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded shadow-lg w-96 relative">
-      <button id="closeAddAdminModal"
-        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
+      <button id="closeAddAdminModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
       <h2 class="text-lg font-bold mb-4">Add Admin</h2>
       <div id="modalAdminList" class="mb-4 max-h-60 overflow-y-auto"></div>
       <div class="flex justify-end gap-2">
@@ -144,13 +147,10 @@
     </div>
   </div>
 
-
-   <!-- Remove Admin Modal -->
-  <div id="removeAdminModal"
-    class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <!-- Remove Admin Modal -->
+  <div id="removeAdminModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded shadow-lg w-96 relative">
-      <button id="closeRemoveAdminModal"
-        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
+      <button id="closeRemoveAdminModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">✕</button>
       <h2 class="text-lg font-bold mb-4">Remove Admin</h2>
       <div id="modalRemoveAdminList" class="mb-4 max-h-60 overflow-y-auto"></div>
       <div class="flex justify-end gap-2">
@@ -160,39 +160,39 @@
     </div>
   </div>
 
-
   <!-- Show Members Modal -->
-<div id="showMembersModal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
-  <div class="bg-white rounded-lg p-6 w-96 relative">
-    <h2 class="text-lg font-bold mb-4">Group Members</h2>
-    <ul id="membersList" class="space-y-2"></ul>
-    <button id="closeShowMembersModal" class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">
-      Close
-    </button>
+  <div id="showMembersModal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-lg p-6 w-96 relative">
+      <h2 class="text-lg font-bold mb-4">Group Members</h2>
+      <ul id="membersList" class="space-y-2"></ul>
+      <button id="closeShowMembersModal" class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">
+        Close
+      </button>
+    </div>
   </div>
-</div>
 
-
-  
   <!-- User List Modal -->
-  <div id="userListModal" class="hidden fixed top-20 right-10 bg-white border border-gray-300 p-4 rounded shadow-lg w-60 z-40">
+  <div id="userListModal"
+    class="hidden fixed top-20 right-10 bg-white border border-gray-300 p-4 rounded shadow-lg w-60 z-40">
     <h3 class="font-semibold text-lg mb-2">Registered Users</h3>
     <ul id="userList" class="text-sm text-gray-800 space-y-1 max-h-64 overflow-y-auto"></ul>
   </div>
 
   <!-- Chat Modal -->
   <div id="chatModal" class="hidden fixed inset-0 bg-black bg-opacity-30 flex justify-center items-center z-50">
-    <div class="bg-white rounded-lg w-full max-w-lg shadow-lg flex flex-col">
-      <div class="p-4 border-b flex justify-between items-center">
+    <div class="bg-white rounded-lg w-full max-w-lg shadow-lg flex flex-col h-[80vh]">
+      <div class="p-4 border-b flex justify-between items-center flex-shrink-0">
         <h2 id="chatGroupName" class="font-bold">Group Chat</h2>
         <button id="closeChatBtn" class="text-gray-500 hover:text-gray-700">✕</button>
       </div>
-      <div id="chatMessages" class="p-4 flex-1 overflow-y-auto space-y-2">
-        <!-- Messages will be appended here -->
-      </div>
-      <form id="chatForm" class="p-4 border-t flex">
+      <div id="chatMessages" class="p-4 flex-1 overflow-y-auto space-y-2"></div>
+      <form id="chatForm" class="p-4 border-t flex flex-shrink-0">
         <input id="chatInput_group" type="text" placeholder="Type a message..."
-          class="flex-1 border rounded px-3 py-2 mr-2" required />
+          class="flex-1 border rounded px-3 py-2 mr-2" />
+        <input type="file" id="fileInput_group" multiple class="hidden" />
+        <button type="button" id="attachBtn_group" class="text-gray-600 hover:text-blue-500 mr-2">
+          <i class="fas fa-paperclip"></i>
+        </button>
         <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Send</button>
       </form>
     </div>
@@ -203,4 +203,5 @@
   <script type="module" src="../js/home.js"></script>
 
 </body>
+
 </html>
